# coresense_understanding_examples

./: CMakeLists.txt  README.md  package.xml
behavior_trees/: model_source.xml
config/: model_combinator.json  model_source.json
include/coresense_understanding_examples/: model_combinator.hpp  model_source.hpp
src/: model_combinator.cpp  model_source.cpp  usage_example.cpp
